@@ -2975,6 +2975,7 @@ $1',
 'version-hook-name'                => '鈎名',
 'version-hook-subscribedby'        => '利用於',
 'version-version'                  => '版本',
+'version-revision'                 => '修訂',
 'version-license'                  => '牌照',
 'version-software'                 => '裝咗嘅軟件',
 'version-software-product'         => '產品',
