@@ -3026,6 +3026,7 @@ $1',
 'version-hook-name'                => '钩名',
 'version-hook-subscribedby'        => '署名',
 'version-version'                  => '版本',
+'version-revision'                 => '修订',
 'version-license'                  => '授权',
 'version-software'                 => '已安装软件',
 'version-software-product'         => '产品',
