@@ -3002,6 +3002,7 @@ $1',
 'version-hook-name'                => '鈎名',
 'version-hook-subscribedby'        => '利用於',
 'version-version'                  => '版本',
+'version-revision'                 => '修訂',
 'version-license'                  => '授權',
 'version-software'                 => '已經安裝的軟件',
 'version-software-product'         => '產品',
