@@ -2913,6 +2913,7 @@ $wgMessageStructure = array(
 		'version-hook-name',
 		'version-hook-subscribedby',
 		'version-version',
+		'version-revision',
 		'version-license',
 		'version-software',
 		'version-software-product',
